fixed logout and login issues with displaying user and his roles also added unauthorized page for exception

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
     <p>
         User: <span th:text="${#authentication.principal.username}"></span>
         <br><br>
-        Role(s): <span th:text="${#authentication.principal.authorities}"></span>
+        Role(s): <span sec:authentication="principal.authorities"></span>
     </p>
     <!-- Add a link to point to /leaders ... this is for the managers -->
 
